# optimization-instance-hub

./: .gitignore  404.html  README.md  index.html  pyproject.toml
.github/: pull_request_template.md
docs/: index_header.md  mkdocs.yml
docs/scripts/: generate_index_page.py
incetances/ml-opt/: description.md
incetances/tsp/: description.md
instances/bin-packing/: bin_packing_10_10.json  bin_packing_10_20.json  bin_packing_10_30.json  bin_packing_10_40.json  bin_packing_10_50.json  bin_packing_10_60.json  bin_packing_10_70.json  bin_packing_10_80.json  bin_packing_10_90.json  bin_packing_20_10.json  bin_packing_20_20.json  bin_packing_20_30.json  bin_packing_20_40.json  bin_packing_20_50.json  bin_packing_20_60.json  bin_packing_20_70.json  bin_packing_20_80.json  bin_packing_20_90.json  bin_packing_30_10.json  bin_packing_30_20.json  bin_packing_30_30.json  bin_packing_30_40.json  bin_packing_30_50.json  bin_packing_30_60.json  bin_packing_30_70.json  bin_packing_30_80.json  bin_packing_30_90.json  bin_packing_40_10.json  bin_packing_40_20.json  bin_packing_40_30.json  bin_packing_40_40.json  bin_packing_40_50.json  bin_packing_40_60.json  bin_packing_40_70.json  bin_packing_40_80.json  bin_packing_40_90.json  bin_packing_50_10.json  bin_packing_50_20.json  bin_packing_50_30.json  bin_packing_50_40.json  (+43 more)
instances/ml-opt/: description.md  index.html  instance_10units_1000est.json  instance_10units_100est.json  instance_10units_5000est.json  instance_10units_500est.json  instance_1units_1000est.json  (+10 more)
search/: search_index.json
src/: consts.py  utils.py
(+6 files in other folders)
