[project]
name = "optimization-instance-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.6.20",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "lightgbm>=4.6.0",
    "polars>=1.33.1",
    "scikit-learn>=1.7.2",
    "pyarrow>=21.0.0",
    "pandas>=2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
